--- a/StellaServer/Animation/AnimationsPanel.xaml
+++ b/StellaServer/Animation/AnimationsPanel.xaml
@@ -1,12 +1,13 @@
 ﻿<reactiveUi:ReactiveUserControl 
-    x:TypeArguments="local:AnimationsPanelViewModel" 
-    x:Class="StellaServer.AnimationsPanel"
+    x:TypeArguments="animation:AnimationsPanelViewModel" 
+    x:Class="StellaServer.Animation.AnimationsPanel"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:StellaServer"
              xmlns:reactiveUi="http://reactiveui.net"
+             xmlns:animation="clr-namespace:StellaServer.Animation"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
         <Grid>
