--- a/StellaServer/BitmapControl.xaml
+++ b/StellaServer/BitmapControl.xaml
@@ -1,12 +1,13 @@
 ﻿<reactiveUi:ReactiveUserControl
     xmlns:reactiveUi="http://reactiveui.net"
-    x:TypeArguments="stellaServer:BitmapViewModel" 
+    x:TypeArguments="animation:BitmapViewModel" 
     x:Class="StellaServer.BitmapControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:stellaServer="clr-namespace:StellaServer"
+             xmlns:animation="clr-namespace:StellaServer.Animation"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
