--- a/StellaServer/Animation/BitmapControl.xaml
+++ b/StellaServer/Animation/BitmapControl.xaml
@@ -1,7 +1,7 @@
 ﻿<reactiveUi:ReactiveUserControl
     xmlns:reactiveUi="http://reactiveui.net"
     x:TypeArguments="animation:BitmapViewModel" 
-    x:Class="StellaServer.BitmapControl"
+    x:Class="StellaServer.Animation.BitmapControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
