--- a/StellaServer/Animation/BitmapSelectionControl.xaml
+++ b/StellaServer/Animation/BitmapSelectionControl.xaml
@@ -1,6 +1,6 @@
 ﻿<reactiveUi:ReactiveUserControl 
-    x:TypeArguments="animation:AnimationsPanelViewModel" 
-    x:Class="StellaServer.Animation.AnimationsPanel"
+    x:TypeArguments="animation:BitmapSelectionViewModel" 
+    x:Class="StellaServer.Animation.BitmapSelectionControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -29,7 +29,7 @@
             <ListView Grid.Column="1" Grid.Row="1" x:Name="BitmapsPanel">
                     <ListView.ItemsPanel>
                         <ItemsPanelTemplate>
-                            <UniformGrid Columns="3"/>
+                            <UniformGrid />
                         </ItemsPanelTemplate>
                     </ListView.ItemsPanel>
             </ListView>
