--- a/StellaServer/Setup/SetupPanel.xaml
+++ b/StellaServer/Setup/SetupPanel.xaml
@@ -49,6 +49,14 @@
                                  Margin="10,0,0,0"/>
                     </StackPanel>
                 </ListViewItem>
+                <ListViewItem>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="Storyboard folder:"/>
+                        <TextBox x:Name="StoryboardFolderTextBox" 
+                                 Width="500"
+                                 Margin="10,0,0,0"/>
+                    </StackPanel>
+                </ListViewItem>
             </ListView>
             <Button x:Name="StartButton" Content="Start" HorizontalAlignment="Center" ></Button>
 
