--- a/StellaServer/Animation/Details/StoryboardDetailsControl.xaml
+++ b/StellaServer/Animation/Details/StoryboardDetailsControl.xaml
@@ -9,11 +9,13 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <materialDesign:Card>
-            <WrapPanel Orientation="Vertical">
-                <TextBlock x:Name="NameTextBlock" FontSize="20"/>
+    <materialDesign:Card Margin="10">
+            <DockPanel Margin="5">
+                <TextBlock x:Name="NameTextBlock" 
+                           DockPanel.Dock="Top" FontSize="20"/>
 
-                <ListView x:Name="AnimationSettingsListView"/>
-            </WrapPanel>
+                <ListView x:Name="AnimationSettingsListView"
+                          DockPanel.Dock="Bottom" />
+            </DockPanel>
     </materialDesign:Card>
 </reactiveUi:ReactiveUserControl>
