--- a/StellaServer/MainControlpanel.xaml
+++ b/StellaServer/MainControlpanel.xaml
@@ -7,16 +7,42 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:StellaServer"
         xmlns:reactiveUi="http://reactiveui.net"
+        xmlns:status="clr-namespace:StellaServer.Status"
         mc:Ignorable="d">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition Height="200"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="300"/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        
         <!-- Switches between currently playing and select new-->
-        <reactiveUi:ViewModelViewHost x:Name="ViewModelViewHost"
+        <reactiveUi:ViewModelViewHost x:Name="AnimationsPanelHost"
+                                      Grid.Column="0" Grid.Row="0" Grid.RowSpan="2"
                                       HorizontalAlignment="Stretch" 
                                       VerticalAlignment="Stretch"
                                       VerticalContentAlignment="Stretch"
                                       HorizontalContentAlignment="Stretch"/>
 
-        <!--TODO server status control-->
+        <reactiveUi:ViewModelViewHost x:Name="ViewModelViewHost"
+                                      Grid.Column="1" Grid.Row="0"
+                                      HorizontalAlignment="Stretch" 
+                                      VerticalAlignment="Stretch"
+                                      VerticalContentAlignment="Stretch"
+                                      HorizontalContentAlignment="Stretch"/>
+
+
+        <reactiveUi:ViewModelViewHost x:Name="StatusControlHost"
+                                      Grid.Row="1" Grid.Column="1"
+                                      HorizontalAlignment="Right" 
+                                      VerticalAlignment="Bottom"
+                                      VerticalContentAlignment="Stretch"
+                                      HorizontalContentAlignment="Stretch"/>
+
+
 
 
     </Grid>
