--- a/StellaServer/MainControlpanel.xaml
+++ b/StellaServer/MainControlpanel.xaml
@@ -8,6 +8,7 @@
         xmlns:local="clr-namespace:StellaServer"
         xmlns:reactiveUi="http://reactiveui.net"
         xmlns:status="clr-namespace:StellaServer.Status"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d">
     <Grid>
         <Grid.RowDefinitions>
@@ -17,6 +18,7 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="300"/>
             <ColumnDefinition/>
+            <ColumnDefinition Width="200"/>
         </Grid.ColumnDefinitions>
         
         <!-- Switches between currently playing and select new-->
@@ -28,22 +30,18 @@
                                       HorizontalContentAlignment="Stretch"/>
 
         <reactiveUi:ViewModelViewHost x:Name="ViewModelViewHost"
-                                      Grid.Column="1" Grid.Row="0"
+                                      Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2"
                                       HorizontalAlignment="Stretch" 
                                       VerticalAlignment="Stretch"
                                       VerticalContentAlignment="Stretch"
                                       HorizontalContentAlignment="Stretch"/>
 
-
         <reactiveUi:ViewModelViewHost x:Name="StatusControlHost"
-                                      Grid.Row="1" Grid.Column="1"
-                                      HorizontalAlignment="Right" 
-                                      VerticalAlignment="Bottom"
+                                      Grid.Row="1" Grid.Column="2"
+                                      HorizontalAlignment="Left" 
+                                      VerticalAlignment="Top"
                                       VerticalContentAlignment="Stretch"
                                       HorizontalContentAlignment="Stretch"/>
-
-
-
 
     </Grid>
 
