--- a/StellaServer/Status/ClientStatusControl.xaml
+++ b/StellaServer/Status/ClientStatusControl.xaml
@@ -5,9 +5,13 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:StellaServer.Status"
              xmlns:reactiveUi="http://reactiveui.net"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
-    </Grid>
+             d:DesignHeight="50" d:DesignWidth="50">
+    <StackPanel>
+        <TextBlock x:Name="NameTextBlock"/>
+        <materialDesign:PackIcon Kind="RouterWireless" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" 
+                                 x:Name="OnlineIndicator"/>
+
+    </StackPanel>
 </reactiveUi:ReactiveUserControl>
