--- a/StellaServer/Transformations/TransformationControl.xaml
+++ b/StellaServer/Transformations/TransformationControl.xaml
@@ -6,9 +6,10 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:StellaServer.Transformations"
              xmlns:reactiveUi="http://reactiveui.net"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="800">
-    <Grid Margin="50,10">
+    <DockPanel Margin="50,10" HorizontalAlignment="Center">
         <Grid Width="200">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
@@ -19,7 +20,7 @@
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition/>
-                <RowDefinition Height="20"/>
+                <RowDefinition Height="30"/>
             </Grid.RowDefinitions>
 
             <Grid.Resources>
@@ -72,12 +73,17 @@
                     TickFrequency="10"
                     SmallChange="1"
                     LargeChange="100"/>
-            <TextBlock x:Name="TimeUnitsPerFrameTextBlock"
+            <TextBlock Text="{Binding ElementName=TimeUnitsPerFrameSlider, Path=Value}"
                        Grid.Column="4" Grid.Row="1"
                        VerticalAlignment="Top" HorizontalAlignment="Center"/>
 
+
         </Grid>
 
+        <Button x:Name="ResetButton" >
+            <materialDesign:PackIcon Kind="Refresh"/>
+        </Button>
 
-    </Grid>
+
+    </DockPanel>
 </reactiveUi:ReactiveUserControl>
