--- a/StellaServer/Animation/AnimationPanelItem.xaml
+++ b/StellaServer/Animation/AnimationPanelItem.xaml
@@ -10,9 +10,23 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" >
     <DockPanel LastChildFill="True">
-        <Button x:Name="StartButton" Content="{materialDesign:PackIcon Play}"
+        <Button x:Name="StartButton" 
                 ToolTip="Icon"
-                DockPanel.Dock="Left" Height="25" Width="30" Padding="0"/>
+                DockPanel.Dock="Left" Height="25" Width="30" Padding="0"
+                >
+            <Button.Style>
+                <Style TargetType="Button" BasedOn="{StaticResource {x:Type Button}}">
+                    <Setter Property="Content" Value="{materialDesign:PackIcon Play}"/>
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding IsPlayList}" Value="True">
+                            <Setter Property="Content" Value="{materialDesign:PackIcon PlaylistPlay}"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Button.Style>
+        </Button>
+
+
         <TextBlock x:Name="NameTextBlock" DockPanel.Dock="Right" VerticalAlignment="Center"
                    Margin="5,0,0,0"/>
        
