--- a/StellaServer/MainWindow.xaml
+++ b/StellaServer/MainWindow.xaml
@@ -14,7 +14,7 @@
        TextElement.FontWeight="Medium"
        TextElement.FontSize="14"
        FontFamily="{materialDesign:MaterialDesignFont}"
-        Title="MainWindow" Height="450" Width="800">
+       Title="Stella Server" Height="450" Width="800">
     <reactiveUi:ViewModelViewHost x:Name="ViewModelViewHost"
                                   HorizontalAlignment="Stretch" 
                                   VerticalAlignment="Stretch"
