--- a/StellaServer/Animation/BitmapSelectionControl.xaml
+++ b/StellaServer/Animation/BitmapSelectionControl.xaml
@@ -16,14 +16,14 @@
     TextElement.FontWeight="Medium"
     TextElement.FontSize="14"
     FontFamily="{materialDesign:MaterialDesignFont}">
-        <Grid>
+        <Grid Margin="10">
             <Grid.RowDefinitions>
                 <RowDefinition Height="30"/>
                 <RowDefinition/>
-                <RowDefinition Height="30"/>
+                <RowDefinition Height="50"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="100"/>
+                <ColumnDefinition Width="120"/>
                 <ColumnDefinition Width="2*"/>
             </Grid.ColumnDefinitions>
 
@@ -33,14 +33,14 @@
             <TextBlock Grid.Column="0" Grid.Row="1" Text="Available bitmaps:"/>
 
 
-            <ListView Grid.Column="1" Grid.Row="1" x:Name="BitmapsPanel">
-                    <ListView.ItemsPanel>
-                        <ItemsPanelTemplate>
-                            <UniformGrid />
-                        </ItemsPanelTemplate>
-                    </ListView.ItemsPanel>
+        <ListView Grid.Column="1" Grid.Row="1" x:Name="BitmapsPanel" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+            <ListView.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <WrapPanel Orientation="Horizontal"  />
+                    </ItemsPanelTemplate>
+                </ListView.ItemsPanel>
             </ListView>
 
-        <Button  Grid.Column="1" Grid.Row="2" Content="Ok" x:Name="OkButton" HorizontalAlignment="Right"/>
+        <Button  Grid.Column="1" Grid.Row="2" Content="Ok" x:Name="OkButton" HorizontalAlignment="Right" Width="80" Margin="5"/>
         </Grid>
 </reactiveUi:ReactiveWindow>
