--- a/StellaServer/Animation/Creation/AnimationCreationControl.xaml
+++ b/StellaServer/Animation/Creation/AnimationCreationControl.xaml
@@ -21,7 +21,7 @@
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="1*"/>
-                    <RowDefinition Height="1*"/>
+                    <RowDefinition Height="220"/>
                     <RowDefinition Height="1*"/>
                     <RowDefinition Height="4*"/>
                     <RowDefinition />
@@ -40,16 +40,19 @@
                 <TextBlock Grid.Column="0"
                            Grid.Row="1"
                            Text="Image:"
-                           VerticalAlignment="Bottom"/>
+                           VerticalAlignment="Center"/>
                 <WrapPanel Grid.Column="1"
                              Grid.Row="1"
-                            VerticalAlignment="Bottom">
-                    <TextBlock x:Name="ImageNameTextBlock"/>
-                    <Image x:Name="BitmapImage"/>
+                            VerticalAlignment="Bottom"
+                             Margin="5">
+
+                    <reactiveUi:ViewModelViewHost x:Name="BitmapViewModelHost"/>
 
                     <Button x:Name="SelectImageButton"
-                            Width="40"
-                            HorizontalAlignment="Left"/>
+                            HorizontalAlignment="Left"
+                            Content="{materialDesign:PackIcon Folder}"
+                            Margin="10,0,0,0"/>
+
                 </WrapPanel>
 
                 <TextBlock Grid.Column="0"
